# bachelors_thesis

./: .gitignore  .prettierignore  .prettierrc  BIN1S_wiśniewskikrzysztof_274276.tex  README.md  abstract.txt  draft.bib  draft.md  draft.tex  layout.md  main.ipynb  package-lock.json  package.json  pyproject.toml  toc.txt  zalacznik_nr_2_wzor_strony_tytulowej.doc
articles/: Treider_v3.doc
resources/: lib.py  plots.ipynb
resources/benchmark_1/: 5qubits_in.mtx  M16_in.mtx  M32_in.mtx  M4_in.mtx  M64_in.mtx  M8_in.mtx  plot.ipynb
resources/benchmark_2/: plot.ipynb
resources/benchmark_3/: numpy_cython_double  plot.ipynb
resources/benchmark_4/: plot.ipynb
resources/benchmark_5/: plot.ipynb
resources/benchmark_6/: plot.ipynb
resources/matrices/: rho1.tex
resources/pc/: pc.tex
resources/profiling_1/: main.prof  profiling.tex
resources/tools/: tools.tex
sources/: Matt_kulkundis_fast_hash_table.md
